# MineBridge

./: .gitignore  README.md  SESSION.md  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: electron-migration-stage-1.md  electron-migration-stage-2-3.md  electron-migration-stage-4-5.md  electron-migration-stage-6.md  electron-migration-stage-7.md
electron/: backend.cjs  main.cjs  preload.cjs
frontend/: index.html
frontend/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
frontend/src/hooks/: useBackendEvents.ts
frontend/src/lib/: api.ts  dialog.ts  errors.ts  format.ts  theme.ts  types.ts  useDebouncedSave.ts
frontend/src/screens/: DashboardScreen.tsx  DiagnosticsScreen.tsx  HomeScreen.tsx  LogsScreen.tsx  MinecraftScreen.tsx  ServersScreen.tsx  SettingsScreen.tsx  (+3 more)
minebridge_frp/: __init__.py
minebridge_frp/app/: __init__.py  electron_launcher.py  main.py
packaging/: minebridge-frp.spec
scripts/: build_linux.sh  build_windows.ps1  generate_icons.py  install_desktop_launcher.sh  prepare_frpc_bundle.py  run_minebridge_frp.sh
tests/: test_api_smoke.py  test_backend_separation.py  test_detection.py  test_diagnostics_service.py  test_electron_frontend_structure.py  test_electron_primary_launcher.py  test_frp_manager.py  test_metrics_service.py  test_minecraft_manager.py  test_minecraft_players.py  test_models.py  test_password_vault.py  test_ports.py  test_process_runner.py  test_profile_service.py  test_setup_state.py  test_ui_behaviour.py  test_vps_helpers.py
(+81 files in other folders)
