[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "minebridge-frp"
version = "0.1.0"
description = "GUI automation for FRP tunnels and local Minecraft servers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "MineBridge FRP Contributors" }
]
dependencies = [
  "PySide6>=6.7",
  "cryptography>=42",
  "paramiko>=3.4",
  "tomlkit>=0.13",
  "pydantic>=2.7",
  "SQLAlchemy>=2.0",
  "psutil>=5.9",
  "requests>=2.32",
  "platformdirs>=4.2",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]
packaging = [
  "pyinstaller>=6.8",
]

[project.scripts]
minebridge-frp = "minebridge_frp.app.main:main"
minebridge-frp-api = "minebridge_frp.app.api.main:main"

[tool.hatch.build.targets.wheel]
packages = ["minebridge_frp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
